# libwetcloth

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
assets/buoyancy_tests/: buoyancy_test_with.xml  buoyancy_test_without.xml
assets/drag_tests/: dam_break_linear_drag.xml  dam_break_nonlinear_drag.xml  dam_break_nonlinear_drag_small.xml
assets/general_examples/: impermeable_small.xml  splash_cloth_small.xml  splash_yarn_small.xml  yarn_small.xml
assets/parameter_tests/: pore_test_acetal.xml  pore_test_fd_high.xml  pore_test_fd_low.xml  pore_test_ft_high.xml  pore_test_ft_low.xml  pore_test_high.xml  pore_test_honey.xml  pore_test_low.xml  pore_test_mid.xml  pore_test_oil.xml  pore_test_zero.xml
assets/unit_tests/: capillary_suction.xml  double_surf_tension.xml  simple_cloth.xml  simple_fluid.xml  simple_fluid_mesh.xml  simple_plastic.xml  simple_surf_tension.xml  simple_yarn.xml  simple_yarn_loop.xml  splash_single_yarn.xml
cmake/: FindANTTWEAKBAR.cmake  FindEigen3.cmake  FindFreeGLUT.cmake  FindGoogleTest.cmake  FindMKL.cmake  FindPNG.cmake  FindRapidXML.cmake  FindTBB.cmake  FindTCLAP.cmake  FindZLIB.cmake
houdini/: pore_test_acetal.hipnc  pore_test_fd_high.hipnc  pore_test_fd_low.hipnc  pore_test_ft_high.hipnc  pore_test_ft_low.hipnc  pore_test_high.hipnc  pore_test_honey.hipnc  pore_test_low.hipnc  pore_test_mid.hipnc  pore_test_oil.hipnc  pore_test_zero.hipnc  splash_cloth_medium.hipnc  splash_yarn_medium.hipnc  splash_yarn_small.hipnc
include/eigen/: .hg_archival.txt
include/igl/: decimate.cpp  edge_collapse_is_valid.cpp  unique_rows.cpp  unique_simplices.cpp
include/igl/copyleft/cgal/: extract_cells.cpp
libWetCloth/: CMakeLists.txt
libWetCloth/App/: CMakeLists.txt  Camera.cpp  Camera.h  ParticleSimulation.cpp  ParticleSimulation.h  RenderingUtilities.cpp  RenderingUtilities.h  TwoDSceneRenderer.cpp  TwoDSceneRenderer.h  TwoDSceneSerializer.cpp  TwoDSceneSerializer.h  TwoDSceneXMLParser.cpp  TwoDSceneXMLParser.h  TwoDimensionalDisplayController.cpp  TwoDimensionalDisplayController.h  YImage.cpp  YImage.h  main.cpp
libWetCloth/Core/: AlgebraicMultigrid.h  Array1.h  Array2.h  Array2Utils.h  Array3.h  Array3Utils.h  AttachForce.cpp  AttachForce.h  CMakeLists.txt  Capsule.cpp  Capsule.h  CohesionForce.cpp  CohesionForce.h  DistanceFields.cpp  DistanceFields.h  ElasticParameters.h  Force.cpp  Force.h  GeometricLevelGen.cpp  GeometricLevelGen.h  Icosphere.cpp  Icosphere.h  JET.h  JunctionForce.cpp  JunctionForce.h  LevelSetForce.cpp  LevelSetForce.h  LinearizedImplicitEuler.cpp  LinearizedImplicitEuler.h  MakeLevelSet3.cpp  MathDefs.h  MathUtilities.cpp  MathUtilities.h  MemUtilities.cpp  MemUtilities.h  Pressure.cpp  Pressure.h  RoundCornerBox.cpp  RoundCornerBox.h  RoundCylinder.cpp  (+37 more)
libWetCloth/Core/DER/: Definitions.h  StrandForce.cpp  StrandForce.h  StrandParameters.h
libWetCloth/Core/DER/Dependencies/: BendingProducts.h  DegreesOfFreedom.cpp  DegreesOfFreedom.h  DependencyNode.h  ElasticStrandUtils.cpp  ElasticStrandUtils.h  ElasticityParameters.h  Kappas.cpp  Kappas.h  MaterialFrames.cpp  MaterialFrames.h  ReferenceFrames.cpp  ReferenceFrames.h  Twists.cpp  Twists.h
libWetCloth/Core/DER/Forces/: BendingForce.cpp  BendingForce.h  ForceAccumulator.h  StretchingForce.cpp  StretchingForce.h  TwistingForce.cpp  TwistingForce.h  ViscousOrNotViscous.h
libWetCloth/Core/PCGSolver/: BLASWrapper.h  PCGSolver.h  SparseMatrix.h
libWetCloth/Core/ThinShell/: ThinShellForce.cpp  ThinShellForce.h
libWetCloth/Core/ThinShell/Forces/: ShellBendingForce.cpp  ShellBendingForce.h  ShellMembraneForce.cpp  ShellMembraneForce.h
libWetCloth/Core/pcgsolver/: blas_wrapper.h  pcg_solver.h  sparse_matrix.h
